--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                     <a href="#">Get in touch with us<span>&rarr;</span></a>
                 </div>
-                <div class="categories">
+                <div class="categories wow  animate__animated animate__zoomIn">
                     <div class="c-1">
                         <img src="./images/01.png" alt="01">
                         <h2>Strategy</h2>
